# smartlibrary

./: .gitignore  README.md  launcher.py  launcherUI.ui  pipeline_launcher.py  pyproject.toml
bat/: run_shot_manager.bat  run_smartlauncher.bat  run_smartlauncher_dev.bat  run_viewer.bat  smartlauncher.bat
config/ELCD/: software_maya.yml  software_start_maya2024.yml  software_usdview.yml  templates_base.yml
config/NEW1/: templates_base.yml
config/NEWPROJ/: templates_base.yml
config/NEWPROJ2/: software_maya.yml  templates_base.yml
config/SLV/: software_AE2025.yml  software_maya.yml  templates_base.yml
config/STKB/: software_AfterEffects2025.yml  software_Blender5.0.yml  software_DaVinciResolve.yml  software_Houdini21.0.440.yml  software_UE5.3.yml  software_maya2026.yml  templates_assets.yml  templates_base.yml  tools.yml
config/default/: software_DaVinciResolve.yml  software_maya.yml  software_maya2026.yml  software_settings.yml  templates_assets.yml  templates_base.yml  templates_shots.yml  tools.yml
config/project_A/: software_AfterEffects2024.yml  software_maya.yml  software_usdview.yml  templates_base.yml  templates_shots.yml
config/sample/: software_maya.yml  templates_base.yml
old/02/: launcher.py
runtime/python/: README.md
scripts/: asset_manager.py  asset_manager_ui.py  config_creator.py  create_assets.py  create_shots.py  dcc_context.py  init_project.py  review_layer_ui.py  shot_manager_ui.py  sync_asset_sheet.py  viewer_ui.py
scripts/ui/: shot_manager.ui
tools/OpenRV/: README.md
tools/ffmpeg/: README.md
(+8 files in other folders)
